--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Store</title>
+    <title>Store Pharma</title>
     <style>
         body { font-family: 'Segoe UI', Arial, sans-serif; background: #f4f7f6; margin: 0; padding: 15px; }
         
@@ -28,7 +28,7 @@
         }
 
         .card img { width: 100%; height: 160px; object-fit: cover; border-radius: 8px; }
-        .card h3 { font-size: 1rem; margin: 10px 0 5px; color: #333; text-transform: uppercase; }
+        .card h3 { font-size: 0.95rem; margin: 10px 0 5px; color: #333; text-transform: uppercase; height: 40px; overflow: hidden; }
         .card .price-range { font-size: 0.85rem; color: #666; font-weight: bold; margin-bottom: 10px; }
 
         .btn-black {
@@ -39,10 +39,10 @@
             border-radius: 20px;
             cursor: pointer;
             font-weight: bold;
-            font-size: 0.85rem;
+            font-size: 0.8rem;
         }
 
-        /* VUE DÉTAIL PRODUIT */
+        /* VUE DÉTAIL PRODUIT UNIQUE */
         #view-detail {
             display: none; 
             background: white;
@@ -60,11 +60,12 @@
         
         .price-big { font-size: 2.2rem; color: #27ae60; font-weight: bold; margin: 20px 0; }
         label { display: block; margin-top: 10px; font-weight: bold; font-size: 0.85rem; text-align: left; }
-        select { width: 100%; padding: 12px; border-radius: 8px; border: 1px solid #ddd; margin-top: 5px; background: #fff; }
+        select { width: 100%; padding: 12px; border-radius: 8px; border: 1px solid #ddd; margin-top: 5px; background: #fff; font-size: 1rem; }
 
         @media (max-width: 500px) {
-            #view-catalog { grid-template-columns: 1fr 1fr; gap: 10px; }
+            #view-catalog { grid-template-columns: 1fr 1fr; gap: 10px; padding: 5px; }
             .card img { height: 130px; }
+            .card h3 { font-size: 0.85rem; }
         }
     </style>
 </head>
@@ -79,7 +80,7 @@
         <div class="desc-box" id="detail-desc"></div>
 
         <div id="options-container">
-            <label id="label-dose">Dosage / Souche :</label>
+            <label id="label-dose">Sélectionnez une option :</label>
             <select id="sel-dose" onchange="updateQty()"></select>
 
             <label>Quantité :</label>
@@ -98,29 +99,27 @@
                 name: "Tramadol",
                 img: "https://res.cloudinary.com/dar9eevt3/image/upload/w_800,h_800,c_pad,b_white,f_auto,q_auto/v1/6008185598566842990_121_kzeeym",
                 range: "100€ - 10,080€",
-                desc: "Le tramadol offre une solution fiable aux personnes recherchant le confort et une meilleure qualité de vie. Son principe actif est un analgésique central qui se fixe aux récepteurs opioïdes du cerveau. Il inhibe également la recapture de la sérotonine et de la noradrénaline.",
+                desc: "Le tramadol offre une solution fiable aux personnes recherchant le confort. Analgésique central qui se fixe aux récepteurs opioïdes.",
                 prices: {
-                    "50mg": { "20": 100, "60": 200, "200": 500, "1000": 3200 },
-                    "100mg": { "20": 120, "60": 250, "200": 750, "1000": 5200 },
-                    "200mg": { "20": 155, "60": 310, "200": 890, "1000": 8000 },
-                    "500mg": { "20": 170, "60": 359, "200": 1050, "1000": 10080 }
+                    "50mg": { "20 pills": 100, "60 pills": 200, "200 pills": 500, "1000 pills": 3200 },
+                    "100mg": { "20 pills": 120, "60 pills": 250, "200 pills": 750, "1000 pills": 5200 }
                 }
             },
             "xanax": {
                 name: "Xanax / Farmapram",
                 img: "https://res.cloudinary.com/dar9eevt3/image/upload/w_800,h_800,c_pad,b_white,f_auto,q_auto/v1/-5897686531106260347_121_r01qi4",
                 range: "100€ - 2,000€",
-                desc: "Xanax appartient à la classe des benzodiazépines, qui agissent en potentialisant les effets d’une substance chimique du cerveau appelée la GABA. Cette substance contribue à apaiser le cerveau et le système nerveux, induisant un effet calmant.",
+                desc: "Appartient aux benzodiazépines. Apaise le cerveau et le système nerveux, induisant un effet calmant.",
                 prices: {
-                    "1mg": { "90": 100, "300": 250, "900": 800, "1500": 1200 },
-                    "2mg": { "90": 200, "300": 500, "900": 1500, "1500": 2000 }
+                    "1mg": { "90 bars": 100, "300 bars": 250, "900 bars": 800, "1500 bars": 1200 },
+                    "2mg": { "90 bars": 200, "300 bars": 500, "900 bars": 1500, "1500 bars": 2000 }
                 }
             },
             "oxycodone": {
                 name: "Oxycodone",
                 img: "https://res.cloudinary.com/dar9eevt3/image/upload/w_800,h_800,c_pad,b_white,f_auto,q_auto/v1/-5841552167540999500_121_hcgvvv",
                 range: "200€ - 1,540€",
-                desc: "L’oxycodone est un médicament puissant qui soulage efficacement les douleurs modérées à sévères. Sa formule à libération prolongée assure un soulagement durable. NB: nos pilules sont de qualité pharmaceutique stricte.",
+                desc: "Puissant soulagement des douleurs modérées à sévères. Formule à libération prolongée. Qualité pharmaceutique stricte.",
                 prices: {
                     "40mg": { "50 tabs": 200, "100 tabs": 385, "500 tabs": 850, "1000 tabs": 1445 },
                     "80mg": { "50 tabs": 220, "100 tabs": 440, "500 tabs": 900, "1000 tabs": 1540 }
@@ -130,7 +129,7 @@
                 name: "Sustanon",
                 img: "https://res.cloudinary.com/dar9eevt3/image/upload/w_800,h_800,c_pad,b_white,f_auto,q_auto/v1/-6043878872740643122_121_m0qsee",
                 range: "100€ - 18,720€",
-                desc: "Mélange injectable de testostérone utilisé pour les traitements hormonaux substitutifs (THS) et l'amélioration des performances sportives. Offre des effets immédiats et durables.",
+                desc: "Mélange injectable de testostérone pour les traitements hormonaux et l'amélioration des performances.",
                 prices: {
                     "250mg": { "2": 110, "10": 450, "100": 4260, "500": 17040 },
                     "300mg": { "2": 130, "10": 520, "100": 4680, "500": 18720 }
@@ -140,7 +139,7 @@
                 name: "Hashish",
                 img: "https://res.cloudinary.com/dar9eevt3/image/upload/w_800,h_800,c_pad,b_white,f_auto,q_auto/v1/hash_bporrc",
                 range: "100€ - 650€",
-                desc: "Découvrez notre sélection de haschisch marocain, charas roulé à la main et bubble hash puissant.",
+                desc: "Sélection de haschisch marocain, charas roulé à la main et bubble hash puissant.",
                 prices: {
                     "Marocain Premium": { "2.5g": 100, "5g": 180, "10g": 340, "20g": 650 },
                     "Charas Himalayan": { "2.5g": 100, "5g": 180, "10g": 340, "20g": 650 },
@@ -151,7 +150,7 @@
                 name: "Ritalin",
                 img: "https://res.cloudinary.com/dar9eevt3/image/upload/w_800,h_800,c_pad,b_white,f_auto,q_auto/v1/-6021417898884580395_121_aztv3s",
                 range: "180€ - 2,050€",
-                desc: "Conçu pour améliorer la concentration et l'attention, et aider à gérer le trouble déficitaire de l'attention avec hyperactivité (TDAH).",
+                desc: "Médicament conçu pour améliorer la concentration et l’attention, notamment pour le TDAH.",
                 prices: {
                     "10mg": { "20 tabs": 180, "60 tabs": 360, "100 tabs": 465, "500 tabs": 1870 },
                     "20mg": { "20 tabs": 200, "60 tabs": 380, "100 tabs": 485, "500 tabs": 1890 },
@@ -164,7 +163,7 @@
                 name: "LSD Gel",
                 img: "https://res.cloudinary.com/dar9eevt3/image/upload/w_800,h_800,c_pad,b_white,f_auto,q_auto/v1/-4972279485802064825_121_jgjzac",
                 range: "100€ - 625€",
-                desc: "Expérience psychédélique intense avec du LSD de qualité supérieure. Disponible en gélules ou buvards.",
+                desc: "Expérience psychédélique intense. Qualité supérieure. Disponible en gélules ou buvards.",
                 prices: {
                     "150ug": { "10 tabs": 100, "20 tabs": 175, "1 sheet": 500 },
                     "250ug": { "10 tabs": 120, "20 tabs": 200, "1 sheet": 550 },
@@ -176,13 +175,45 @@
                 name: "Lyrica",
                 img: "https://res.cloudinary.com/dar9eevt3/image/upload/w_800,h_800,c_pad,b_white,f_auto,q_auto/v1/-5068903352175275397_120_btunww",
                 range: "100€ - 1,300€",
-                desc: "Utilisé pour traiter les douleurs neuropathiques, l'épilepsie et le trouble anxieux généralisé (TAG).",
+                desc: "Utilisé pour traiter les douleurs neuropathiques, certaines formes d’épilepsie et l'anxiété (TAG).",
                 prices: {
                     "25mg": { "112 tabs": 100, "280 tabs": 200, "560 tabs": 400 },
                     "50mg": { "112 tabs": 150, "280 tabs": 300, "560 tabs": 400 },
                     "75mg": { "56 tabs": 100, "112 tabs": 175, "280 tabs": 350, "560 tabs": 700 },
                     "150mg": { "56 tabs": 150, "112 tabs": 300, "280 tabs": 550, "560 tabs": 1000 },
                     "300mg": { "56 tabs": 200, "112 tabs": 375, "280 tabs": 700, "560 tabs": 1300 }
+                }
+            },
+            "rohypnol": {
+                name: "Rohypnol",
+                img: "https://res.cloudinary.com/dar9eevt3/image/upload/w_800,h_800,c_pad,b_white,f_auto,q_auto/v1/-5767180595447841515_120_ggihnb",
+                range: "150€ - 1,220€",
+                desc: "Dépresseur du système nerveux appartenant aux benzodiazépines.",
+                prices: {
+                    "1mg": { "90 tabs": 150, "120 pills": 210, "150 pills": 275, "300 pills": 500, "360 pills": 600, "600 pills": 1000 },
+                    "2mg": { "90 tabs": 210, "120 pills": 275, "150 pills": 340, "300 pills": 660, "360 pills": 780, "600 pills": 1220 }
+                }
+            },
+            "dmt": {
+                name: "DMT",
+                img: "https://res.cloudinary.com/dar9eevt3/image/upload/w_800,h_800,c_pad,b_white,f_auto,q_auto/v1/5843700699161019141_109_v2wtdp",
+                range: "100€ - 400€",
+                desc: "Composé psychédélique puissant. Expérience d’immersion totale dans une autre dimension.",
+                prices: {
+                    "Poudre Pure": { "1g": 100, "2g": 175, "3g": 250, "5g": 400 }
+                }
+            },
+            "adderall": {
+                name: "Adderall",
+                img: "https://res.cloudinary.com/dar9eevt3/image/upload/w_800,h_800,c_pad,b_white,f_auto,q_auto/v1/-5782989369337037424_121_mar9z7",
+                range: "120€ - 3,250€",
+                desc: "Améliore la concentration et les pensées cognitives. Pour TDAH et narcolepsie.",
+                prices: {
+                    "10mg": { "20 tabs": 120, "60 tabs": 325, "100 tabs": 600, "500 tabs": 2400 },
+                    "15mg": { "20 tabs": 135, "60 tabs": 385, "100 tabs": 675, "500 tabs": 2600 },
+                    "20mg": { "20 tabs": 145, "60 tabs": 420, "100 tabs": 700, "500 tabs": 2800 },
+                    "25mg": { "20 tabs": 155, "60 tabs": 450, "100 tabs": 750, "500 tabs": 3000 },
+                    "30mg": { "20 tabs": 165, "60 tabs": 480, "100 tabs": 800, "500 tabs": 3250 }
                 }
             }
         };
